@@ -4,6 +4,9 @@ DPY=$(DEBPYTHON_DEFAULT)
 	dh $@ --buildsystem=python_distutils
 
 override_dh_pysupport:
+
+override_dh_install:
+	dh_install
 	# install also as private extension
 	dh_install debian/python-foo/usr/lib/python${DPY}/dist-packages/foo/bar.so \
 		/usr/lib/python-foo/
